--- a/AutoMall/ViewControllers/PersonalCenter/ReceiveAddressViewController.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/ReceiveAddressViewController.xib
@@ -21,21 +21,51 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="u4z-Kd-YHe">
-                    <rect key="frame" x="0.0" y="63" width="375" height="604"/>
+                    <rect key="frame" x="0.0" y="63" width="375" height="560"/>
                     <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="8Jn-Dx-wAb"/>
                         <outlet property="delegate" destination="-1" id="tp1-X7-6ee"/>
                     </connections>
                 </tableView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n46-PF-www">
+                    <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                    <color key="backgroundColor" red="0.91764705879999997" green="0.12941176469999999" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="aMY-HI-IIy"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <state key="normal" title="添加地址">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <state key="disabled">
+                        <color key="titleColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="aMY-HI-IIy"/>
+                        </mask>
+                    </variation>
+                    <variation key="widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="aMY-HI-IIy"/>
+                        </mask>
+                    </variation>
+                    <connections>
+                        <action selector="addNewAddress:" destination="-1" eventType="touchUpInside" id="oZh-2C-ajD"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="u4z-Kd-YHe" secondAttribute="trailing" id="0PL-QH-jqE"/>
-                <constraint firstAttribute="bottom" secondItem="u4z-Kd-YHe" secondAttribute="bottom" id="1c9-Gt-9bC"/>
+                <constraint firstAttribute="trailing" secondItem="n46-PF-www" secondAttribute="trailing" id="3pS-En-fay"/>
+                <constraint firstItem="n46-PF-www" firstAttribute="top" secondItem="u4z-Kd-YHe" secondAttribute="bottom" id="D98-wk-qmb"/>
+                <constraint firstAttribute="bottom" secondItem="n46-PF-www" secondAttribute="bottom" id="irT-6E-mkv"/>
                 <constraint firstItem="u4z-Kd-YHe" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="63" id="uam-Wj-21m">
                     <variation key="widthClass=compact" constant="63"/>
                 </constraint>
+                <constraint firstItem="n46-PF-www" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="v5U-eK-eyk"/>
                 <constraint firstItem="u4z-Kd-YHe" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="yBg-Ds-7gn"/>
             </constraints>
             <variation key="default">
@@ -44,7 +74,6 @@
                 </mask>
                 <mask key="constraints">
                     <exclude reference="0PL-QH-jqE"/>
-                    <exclude reference="1c9-Gt-9bC"/>
                     <exclude reference="uam-Wj-21m"/>
                     <exclude reference="yBg-Ds-7gn"/>
                 </mask>
@@ -55,12 +84,11 @@
                 </mask>
                 <mask key="constraints">
                     <include reference="0PL-QH-jqE"/>
-                    <include reference="1c9-Gt-9bC"/>
                     <include reference="uam-Wj-21m"/>
                     <include reference="yBg-Ds-7gn"/>
                 </mask>
             </variation>
-            <point key="canvasLocation" x="52" y="69"/>
+            <point key="canvasLocation" x="-290" y="66"/>
         </view>
     </objects>
 </document>
