--- a/AutoMall/ViewControllers/PersonalCenter/EmployeeDetailVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/EmployeeDetailVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -20,10 +20,9 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="twm-3u-V5t">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="twm-3u-V5t">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="Zns-Wb-zlE"/>
                         <outlet property="delegate" destination="-1" id="bWO-5i-m4R"/>
@@ -31,6 +30,12 @@
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="twm-3u-V5t" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="5vR-pk-sCT"/>
+                <constraint firstItem="twm-3u-V5t" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="dBW-uQ-hql"/>
+                <constraint firstAttribute="bottom" secondItem="twm-3u-V5t" secondAttribute="bottom" id="gPA-Ij-2cB"/>
+                <constraint firstAttribute="trailing" secondItem="twm-3u-V5t" secondAttribute="trailing" id="hWw-iW-jte"/>
+            </constraints>
             <point key="canvasLocation" x="-192" y="42"/>
         </view>
     </objects>
