--- a/AutoMall/ViewControllers/PersonalCenter/AddressInfoEditVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/AddressInfoEditVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -417,7 +417,7 @@
                 <constraint firstItem="yUX-Zb-naa" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="iLa-Ev-blk"/>
                 <constraint firstItem="9a2-bR-5DC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="r6U-mA-bk6"/>
             </constraints>
-            <point key="canvasLocation" x="-154" y="53"/>
+            <point key="canvasLocation" x="-96" y="47"/>
         </view>
     </objects>
     <resources>
