--- a/AutoMall/ViewControllers/PersonalCenter/CustomServiceVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/CustomServiceVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -36,6 +36,9 @@
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <state key="normal" title="保存"/>
+                    <connections>
+                        <action selector="saveAction:" destination="-1" eventType="touchUpInside" id="MZB-Me-iAo"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -48,7 +51,7 @@
                 <constraint firstItem="ei8-wH-Ly9" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="rEw-UH-aBK"/>
                 <constraint firstAttribute="trailing" secondItem="TsH-VV-gxO" secondAttribute="trailing" id="teJ-ID-LIC"/>
             </constraints>
-            <point key="canvasLocation" x="-265.5" y="41.5"/>
+            <point key="canvasLocation" x="-18" y="53"/>
         </view>
     </objects>
 </document>
