--- a/AutoMall/ViewControllers/PersonalCenter/ReceiveAddressViewController.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/ReceiveAddressViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -88,7 +88,7 @@
                     <include reference="yBg-Ds-7gn"/>
                 </mask>
             </variation>
-            <point key="canvasLocation" x="-290" y="66"/>
+            <point key="canvasLocation" x="-36" y="66"/>
         </view>
     </objects>
 </document>
